# dev-cicd-tools

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .releaserc.json  .ruff.toml  .semgrep.yml  Makefile  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: lint.yml  pre-commit.yml  precommit.yml  review-release.yml  semantic-release.yml  test-package-app-dependencies.yml  test-precommit.yml  test-review-release.yml  test-start-release.yml  upload-semgrep-rules.yml
github-actions/generate-doc/: action.yml  requirements.txt
github-actions/integration-tests/: action.yml
github-actions/lint/: action.yml  requirements.txt
github-actions/package-app-dependencies/: action.yml  main.py
github-actions/semgrep/: .semgrepignore  (+1 more)
lint-configs/: pyproject.toml  tox.ini
local-hooks/: .pre-commit-hooks.yaml  package_app_dependencies.py  package_app_dependencies.sh
local_hooks/: build_docs.py  build_docs_lib.py  copyright_updates.py  generate_notice.py  helpers.py  log.py  package_app_dependencies.py  package_app_dependencies.sh  package_app_dependencies_caller.py  release_notes.py  release_notes.sh  static_tests.py  static_tests.sh
pre-commit/: build_docs  build_docs.py  build_docs.sh  copyright  copyright.sh  copyright_updates.py  dev-requirements.txt  generate_notice.sh  orghooks.yaml  package_app_dependencies  package_app_dependencies.py  package_app_dependencies.sh  readme-check.py  readme_check.py  release_notes.py  run-org-hooks  static_tests  static_tests.py  static_tests.sh  tox.ini
pre-commit-setup/: copy_configs.py  pre-commit-hooks-template.yaml  setup_hooks.py
pre-commit-template/: pre-commit-hooks-template.yaml
semgrep/: README.md  dev-requirements.txt  upload_private_rules.sh
templates/: call-publish-template.yml  call-push-template.yml  pre-commit-hooks-in-docker-template.yaml  pre-commit-hooks-no-docker-template.yaml  pre-commit-hooks-template.yaml  pyproject.toml
(+191 files in other folders)
